--- a/styles/about.css
+++ b/styles/about.css
@@ -1,8 +1,6 @@
 .about-me .hero {
   height: 100%;
-  width: 80%;
   margin: auto;
-  padding-top: 20vh;
   text-align: center;
 }
 
@@ -18,21 +16,12 @@
 .about {
   margin: auto;
   width: 65%;
-  padding-top: 5rem;
-  padding-bottom: 10rem;
-}
-
-.about a {
-  color: #950444;
-}
-
-h4 {
-  margin-bottom: 0;
-  padding-top: 1rem;
+  padding-top: 2rem;
+  padding-bottom: 5rem;
 }
 
 .capabilities {
-  padding-bottom: 15rem;
+  padding: 5rem 0;
   background: rgb(102,191,145);
   background: linear-gradient(166deg, rgba(129,241,183,0.67) 0%,
   rgba(255,211,213,0.78) 65%,
@@ -41,11 +30,9 @@ h4 {
 
 .capabilities .caps {
   margin: auto;
-  width: 80%;
+  width: 65%;
   display: block;
   height: 100%;
-  padding: 20vh 0px;
-  margin-bottom: 7rem;
 }
 
 .capabilities div {
@@ -74,32 +61,29 @@ h4 {
 .moodboard h2 {
   margin: auto;
   width: 65%;
-  padding-bottom: 2rem;
-  padding-top: 5rem;
 }
 
 .moodboard img {
   width: 100%;
   height: auto;
-  margin-bottom: 5rem;
+  margin: 2rem 0;
 }
 
 /*Media Queries*/
 @media screen and (max-width: 768px) {
-  .about, .hero, .moodboard h2 {
-    width: 100%;
+  .about, .hero {
+    width: 80%;
     display: block;
-    padding: 3rem;
-  }
-
-  .capabilities {
-    padding-bottom: 30rem;
   }
 
   .capabilities .skills, .capabilities .software {
     display: block;
     width: 100%;
-    padding-left: 0;
+    padding: 0;
+  }
+
+  .moodboard h2 {
+    width: 80%;
   }
 }
 @media screen and (max-width: 1024px) {
@@ -116,19 +100,6 @@ h4 {
   .photo img {
     width: 180%;
     float: right;
-    padding-bottom: 5rem;
-  }
-
-  p {
-    font-size: 16px;
-    line-height: 25px;
-  }
-
-  .caps {
-    margin-bottom: 0;
-  }
-
-  .buttons {
     padding-bottom: 5rem;
   }
 
